fix form helper text causing jumps from height change

--- a/src/components/VariantParserComponent/VariantParserComponent.scss
+++ b/src/components/VariantParserComponent/VariantParserComponent.scss
@@ -1,6 +1,7 @@
 @import '../../globals';
 .variant-parser-wrapper {
     display: flex;
+    height: 68px;
     button {
         transition: all 0.15s;
     }
